Fix mobile navigation layout breaking on wide tables

--- a/app/assets/stylesheets/modules/_tables.styl
+++ b/app/assets/stylesheets/modules/_tables.styl
@@ -196,6 +196,11 @@
   +below(tablet)
     width max-content
 
+.table-responsive
+  display block
+  overflow-x auto
+  -webkit-overflow-scrolling touch
+
 .revision-list-container
   +below(tablet)
     overflow-y: scroll
